update: the color of the background of home page

--- a/src/main/frontend/themes/scheduling-system/styles.css
+++ b/src/main/frontend/themes/scheduling-system/styles.css
@@ -1,6 +1,6 @@
 .home-view{
     font-family: consolas;
-    background-color: lightslategray;
+    background-color: steelblue;
 }
 .hero-section{
     background-color: rgba(33,50,70);
