--- a/src/main/frontend/themes/scheduling-system/styles.css
+++ b/src/main/frontend/themes/scheduling-system/styles.css
@@ -1,3 +1,15 @@
+* {
+    touch-action: manipulation;
+}
+
+.user-profile {
+    border: none !important;
+}
+
+.user-profile [part="header"] {
+    outline: none !important;
+}
+
 .profile-name-wrap {
     white-space: normal;
 }
@@ -10,29 +22,32 @@
 
 .teacher-profile {
     border: 1px solid #ccc;
-    border-radius: 10px;
     padding: 10px;
     margin: 0;
 }
 
-.teacher-profile-subtitle {
+.profile-subtitle {
     font-size: var(--lumo-font-size-s);
     color: var(--lumo-tertiary-text-color);
 }
 
-.teacher-profile-grid {
+.profile-grid {
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    padding: var(--lumo-space-s);
     max-width: 1200px;
 }
 
-.teacher-profile-grid-toolbar {
+.profile-grid-toolbar {
     column-gap: var(--lumo-space-m);
-
 }
 
 .scheduling-dialog {
     max-width: 800px;
+}
+
+.scheduling-dialog::part(content) {
+    padding: 0.2rem !important;
 }
 
 .home-layout-header {
