--- a/src/main/frontend/themes/scheduling-system/card/card.css
+++ b/src/main/frontend/themes/scheduling-system/card/card.css
@@ -1,3 +1,11 @@
 .appointment-card-subtitle .appointment-card-date {
     margin-right: var(--lumo-space-m);
 }
+
+.appointment-card-body .appointment-card-appointed-by,
+.appointment-card-body .appointment-card-description,
+.appointment-card-body .appointment-card-place {
+    width: 100%;
+    white-space: normal;
+    overflow-wrap: break-word;
+}
