--- a/src/main/frontend/themes/scheduling-system/layout/layout.css
+++ b/src/main/frontend/themes/scheduling-system/layout/layout.css
@@ -18,21 +18,23 @@
 
 }
 
-.home-layout-drawer-layout .home-layout-home-button,
-.home-layout-drawer-layout .home-layout-login-button,
-.home-layout-drawer-layout .home-layout-register-button {
-    transition: background-color 0.2s, box-shadow 0.2s;
-}
-
 .home-layout-drawer-layout .home-layout-home-button:hover,
 .home-layout-drawer-layout .home-layout-login-button:hover,
 .home-layout-drawer-layout .home-layout-register-button:hover {
-    background-color: var(--lumo-primary-color-70pct);
     cursor: pointer;
 }
 
-.home-layout-drawer-layout .home-layout-home-button:active,
-.home-layout-drawer-layout .home-layout-login-button:active,
-.home-layout-drawer-layout .home-layout-register-button:active {
-    background-color: var(--lumo-primary-color-90pct);
+.home-layout-drawer-layout .home-layout-home-button:hover,
+.home-layout-drawer-layout .home-layout-home-button:active{
+    background-color: var(--lumo-warning-color);
+}
+
+.home-layout-drawer-layout .home-layout-login-button:hover,
+.home-layout-drawer-layout .home-layout-login-button:active {
+    background-color: var(--lumo-primary-color);
+}
+
+.home-layout-drawer-layout .home-layout-register-button:hover,
+.home-layout-drawer-layout .home-layout-register-button:active{
+    background-color: var(--lumo-error-color);
 }
