--- a/src/main/frontend/themes/scheduling-system/styles.css
+++ b/src/main/frontend/themes/scheduling-system/styles.css
@@ -7,3 +7,9 @@
 * {
     touch-action: manipulation;
 }
+
+.truncate {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
